[package]
name = "balaeno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4" }
vfs = "0.12.0"
log = "0.4"
oci-spec = "0.6.5"
serde_json = "1.0"
shellexpand = "3.1.0"
anyhow = "1.0"
simple_logger = "4.3.3"
derive_builder = "0.20.0"
getset = "0.1.1"
lazy_static = "1.4.0"

[workspace]
members = ["cli", "libruntime"]

[[bin]]
name = "balaeno"
path = "cli/src/main.rs"

[lib]
name = "libruntime"
path = "libruntime/src/lib.rs"
