[package]
name = "libruntime"
version = "0.1.0"
edition = "2021"

[dependencies]
vfs = "0.12.0"
log = "0.4"
oci-spec = "0.6.5"
shellexpand = "3.1.0"
serde_json = "1.0"
anyhow = "1.0"
simple_logger = "5.0.0"
nix = {version = "0.28.0", features = ["sched", "fs", "socket", "net"]}
strum = "0.26"
strum_macros = "0.26"